update java readme with link to test resources dir

--- a/java-example/src/main/resources/application.properties
+++ b/java-example/src/main/resources/application.properties
@@ -4,14 +4,14 @@
 # Example: matesub.api.base.url=https://api.matesub.com
 matesub.api.base.url=
 # Name of the video file to upload. The video must be in the resources/videos directory
-# Example: video.file.name=my-test-video.mp4
+# Example: video.file.name=en-test-video01.mp4
 video.file.name=
 # Source language of the video file to upload.
 # Example: video.file.source.language=en-US
 video.file.source.language=
 # The name of the SRT file to upload and to be used as project reference. The file must be in the resource/reference directory.
 # If not set the reference won't be added to the project
-# Example: reference.file.name=my-test-reference_en-US.srt
+# Example: reference.file.name=en-test-video01.mp4__en-US.srt
 reference.file.name=
 # The language of the SRT file configured with the reference.file.name property.
 # Example: reference.file.language=en-US
