update application properties beta api endpoint description

--- a/java-example/src/main/resources/application.properties
+++ b/java-example/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MateSub api Base URL:
-#   - BETA: https://beta.matesub.com
+#   - BETA: https://api.beta.matesub.com
 #   - PROD: https://api.matesub.com
 # Example: matesub.api.base.url=https://api.matesub.com
 matesub.api.base.url=
