remove Beta reference

--- a/java-example/src/main/resources/application.properties
+++ b/java-example/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-# MateSub api Base URL:
-#   - BETA: https://api.beta.matesub.com
-#   - PROD: https://api.matesub.com
-# Example: matesub.api.base.url=https://api.matesub.com
-matesub.api.base.url=
+matesub.api.base.url=https://api.matesub.com
 # Name of the video file to upload. The video must be in the resources/videos directory
 # Example: video.file.name=en-test-video01.mp4
 video.file.name=
